see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

08-Jan-2012 Jean-Marie Simonet
 # [#27551] Smart Search patch to show warning if content plug-in not enabled. Thanks Chris.
 # [#27580] Smart Search - Duplicate Code Cleanup, Strict Errors with FinderControllerUpdater. Thanks Michael
 # [#27631] Smart Search indexing does not properly account for item published states. Thanks Michael and Chris.
 # [#27584] Search from smart search module is producing two item ids. Thanks Elin and Andrea.
 # [#27654] Smart Search - Fix use of CHAR_LENGTH MySQL command. Thanks Michael.

07-Jan-2012 Christophe Demko
 # [#24634] Menu items don't become active (i.e. highlight) if the Menu Item Type is "Menu Item Alias" (Bernie Sumption)

07-Jan-2012 Jean-Marie Simonet
 # [#27636] Option to disable Smart Search autocompleter missing from user interface. Thanks Chris

06-Jan-2012 Christophe Demko
 # [#24533] Last updated on article without updating it bugs (bill richardson)
 # [#24712] Module, template, and plugin preprocess forms not passing content group or any group to allow editing via the onContentPrepareForm plugin event (Brian Towles)
 # [#25790] Some queries not correctly dealing with trash (Mark Dexter)
 # [#25491] Incorrect check in page_heading in weblinks (bill richardson)
 # [#23890] Edit own action in User Manager (Sander Potjer)

06-Jan-2012 Jean-Marie Simonet
 # [#27579] Smart Search search term highlighting not working. Thanks Rouven and Michael.
 # [#27540] Finder / Smart Search selectbox order. Thanks Brian
 # [#27573] Incorrect route created by Smart Search contact plug-in. Thanks Michael