@@ -27,17 +27,10 @@ foreach ($list as $i => &$item) :
 		$class .= ' current';
 	}
 
-	if (in_array($item->id, $path)) {
+	if (	$item->type == 'alias' &&
+			in_array($item->params->get('aliasoptions'),$path)
+		||	in_array($item->id, $path)) {
 		$class .= ' active';
-	}
-	elseif ($item->type == 'alias') {
-		$aliasToId = $item->params->get('aliasoptions');
-		if ($aliasToId == $path[count($path)-1]) {
-			$class .= ' active';
-		}
-		elseif (in_array($aliasToId, $path)) {
-			$class .= ' alias-parent-active';
-		}
 	}
 
 	if ($item->deeper) {
